# Kruskal

./: CMakeLists.txt
include/: Dsu.h  Errors.h  Graph.h  KruskalAlg.h
src/: Dsu.c  Errors.c  Graph.c  KruskalAlg.c  main.c
